# kharis-screening-agent

./: .env.example  .gitignore  ANSWERS.md  README.md  pyproject.toml
src/: config.py  main.py
src/agent/: prompts.py  screener.py  tools.py
src/models/: schemas.py
src/services/: bot.py  scraper.py  search.py  slack.py
tests/: test_agent.py  test_services.py
